samples/_failures_safe/1761043573_8231e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_989f2cc6.c: In function ‘main’:
./samples/SAFE/__tmp_989f2cc6.c:163:5: error: expected declaration or statement at end of input
  163 |     if (token_count == 0) {
      |     ^~
./samples/SAFE/__tmp_989f2cc6.c:163:5: error: expected declaration or statement at end of input
